# seed

./: .gitignore  Cargo.toml  README.md
benches/: parse_benchmark.rs
crates/seed-constraint/: Cargo.toml
crates/seed-constraint/src/: lib.rs  solver.rs
crates/seed-core/: Cargo.toml
crates/seed-core/src/: ast.rs  errors.rs  types.rs
crates/seed-expander/: Cargo.toml
crates/seed-expander/src/: expander.rs  registry.rs
crates/seed-export/: Cargo.toml
crates/seed-export/src/: lib.rs  pdf.rs  png.rs  step.rs  stl.rs  svg.rs
crates/seed-layout/: Cargo.toml
crates/seed-layout/src/: auto_layout.rs  lib.rs  text.rs  tree.rs
crates/seed-parser/src/: grammar.rs
crates/seed-render-2d/: Cargo.toml
crates/seed-render-2d/src/: lib.rs  primitives.rs  scene.rs  shapes.rs
crates/seed-render-3d/src/: lib.rs  material.rs  renderer.rs
crates/seed-resolver/: Cargo.toml
crates/seed-resolver/src/: tokens.rs
crates/seed-wasm/: demo.html
crates/seed-wasm/demo/: index.html  serve.py  simple.html
crates/seed-wasm/src/: canvas.rs  lib.rs  types.rs
lie_groups/: README.md  main.py  pyproject.toml
lie_groups/docs/: mathematical_notes.md
lie_groups/examples/: geodesic_embedding.py  su3_weyl_alcove.py
lie_groups/src/lie_groups/: __init__.py  cartan.py  core.py  geodesic.py  weyl.py
lie_groups/tests/: test_core.py  test_geodesic.py  test_weyl.py
seed/: CLAUDE.md  seed_engine_todo.md
seed/seed-engine/: .gitignore  Cargo.toml  README.md
seed/seed-engine/crates/seed-analyze/: Cargo.toml
seed/seed-engine/crates/seed-analyze/examples/: test_analyze.rs  test_complex.rs  test_dark_theme.rs
seed/seed-engine/crates/seed-analyze/src/: canny.rs  codegen.rs  color.rs  contour.rs  edge.rs  hierarchy.rs  hough.rs  kmeans.rs  lib.rs  morph.rs  properties.rs  region.rs  shapes.rs  text.rs
seed/seed-engine/crates/seed-codegen/: Cargo.toml
seed/seed-engine/crates/seed-codegen/src/: element.rs  error.rs  lib.rs  model.rs
seed/seed-engine/crates/seed-codegen/src/analyzer/: graph_builder.rs  mod.rs  patterns.rs  roles.rs  state_builder.rs
seed/seed-engine/crates/seed-codegen/src/generators/: compose.rs  mod.rs  react.rs  scaffold.rs  swiftui.rs  templates.rs
seed/seed-engine/crates/seed-constraint/src/: cassowary.rs  solver.rs
seed/seed-engine/crates/seed-core/src/: ast.rs  errors.rs  lib.rs  tokens.rs  types.rs
seed/seed-engine/crates/seed-expander/src/: expander.rs  lib.rs  registry.rs
seed/seed-engine/crates/seed-export/: Cargo.toml
seed/seed-engine/crates/seed-export/src/: gcode.rs  lib.rs  pdf.rs  step.rs  svg.rs  threemf.rs
seed/seed-engine/crates/seed-io/: Cargo.toml
seed/seed-engine/crates/seed-io/src/: error.rs  lib.rs
seed/seed-engine/crates/seed-io/src/convert/: mod.rs  primitives.rs  tessellate.rs
seed/seed-engine/crates/seed-io/src/formats/: mod.rs  seed.rs
seed/seed-engine/crates/seed-io/src/formats/gltf/: mod.rs  reader.rs  schema.rs  writer.rs
seed/seed-engine/crates/seed-io/src/formats/step/: entities.rs  mod.rs  p21.rs  reader.rs  writer.rs
seed/seed-engine/crates/seed-io/src/formats/usd/: mod.rs  reader.rs  usda.rs  usdc.rs  writer.rs
seed/seed-engine/crates/seed-io/src/registry/: mod.rs  registry.rs  traits.rs
seed/seed-engine/crates/seed-io/src/scene/: geometry.rs  material.rs  metadata.rs  mod.rs
seed/seed-engine/crates/seed-layout/src/: compute.rs  grid.rs  text.rs
seed/seed-engine/crates/seed-parser/: Cargo.toml
seed/seed-engine/crates/seed-parser/src/: grammar.rs  lexer.rs  lib.rs
seed/seed-engine/crates/seed-render-2d/: Cargo.toml
seed/seed-engine/crates/seed-render-2d/src/: lib.rs  pipeline.rs  primitives.rs  scene.rs  shapes.rs  text.rs
seed/seed-engine/crates/seed-render-2d/src/gpu/: mod.rs  renderer.rs  shaders.rs
seed/seed-engine/crates/seed-render-3d/: Cargo.toml
seed/seed-engine/crates/seed-render-3d/src/: geometry.rs  lib.rs  material.rs  renderer.rs  scene.rs  tessellation.rs
seed/seed-engine/crates/seed-resolver/src/: lib.rs  references.rs  tokens.rs
seed/seed-engine/crates/seed-wasm/: Cargo.toml
seed/seed-engine/crates/seed-wasm/demo/: README.md  index.html  test.html  test2.html  test3.html
seed/seed-engine/crates/seed-wasm/src/: canvas.rs  io.rs  lib.rs  memory.rs  types.rs
seed/seed-engine/docs/: mesh-geometry-design.md  step-rendering-parity.md
seed/seed-engine/tests/fixtures/: card.seed
tests/fixtures/: button.seed
