[package]
name = "seed-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, AST, and utilities for the Seed rendering engine"

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }
smallvec.workspace = true
indexmap.workspace = true

[features]
default = []
serde = ["dep:serde", "indexmap/serde", "smallvec/serde"]
