[package]
name = "seed-export"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Export formats for Seed documents"

[dependencies]
seed-core.workspace = true
seed-layout = { workspace = true }
seed-render-2d = { workspace = true }
seed-render-3d = { workspace = true }
thiserror.workspace = true
serde_json.workspace = true
glam.workspace = true

[features]
default = ["svg", "pdf"]
svg = []
pdf = []
step = []
stl = []
