[workspace]
resolver = "2"
members = [
    "crates/seed-core",
    "crates/seed-ecs",
    "crates/seed-scene",
    "crates/seed-paint",
    "crates/seed-pipeline",
    "crates/seed-gpu",
    "crates/seed-json",
    "crates/seed-parser",
    "crates/seed-resolver",
    "crates/seed-expander",
    "crates/seed-constraint",
    "crates/seed-layout",
    "crates/seed-render-2d",
    "crates/seed-render-3d",
    "crates/seed-export",
    "crates/seed-analyze",
    "crates/seed-vision",
    "crates/seed-codegen",
    "crates/seed-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seed-spec/seed-engine"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
seed-core = { path = "crates/seed-core" }
seed-ecs = { path = "crates/seed-ecs" }
seed-scene = { path = "crates/seed-scene" }
seed-paint = { path = "crates/seed-paint" }
seed-parser = { path = "crates/seed-parser" }
seed-resolver = { path = "crates/seed-resolver" }
seed-expander = { path = "crates/seed-expander" }
seed-constraint = { path = "crates/seed-constraint" }
seed-layout = { path = "crates/seed-layout" }
seed-render-2d = { path = "crates/seed-render-2d" }
seed-render-3d = { path = "crates/seed-render-3d" }
seed-export = { path = "crates/seed-export" }
seed-analyze = { path = "crates/seed-analyze" }
seed-pipeline = { path = "crates/seed-pipeline" }
seed-gpu = { path = "crates/seed-gpu" }
seed-json = { path = "crates/seed-json" }
seed-vision = { path = "crates/seed-vision" }
seed-codegen = { path = "crates/seed-codegen" }

# ECS dependencies
bitvec = "1.0"
rustc-hash = "2.0"
rayon = "1.10"
crossbeam-utils = "0.8"

# Parsing
nom = "7"

# Data structures
indexmap = "2"
smallvec = "1"

# Error handling
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Math
glam = "0.29"

# GPU rendering
wgpu = "23"

# 2D tessellation
lyon = "1"

# WASM
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# Testing
criterion = "0.5"
proptest = "1"
insta = { version = "1", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
