[package]
name = "seed-export"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Export formats for Seed documents"

[dependencies]
seed-core.workspace = true
seed-layout = { workspace = true }
seed-render-2d = { workspace = true }
seed-render-3d = { workspace = true }
thiserror.workspace = true
serde_json.workspace = true
glam.workspace = true
pdf-writer = { version = "0.12", optional = true }
zip = { version = "2.2", default-features = false, features = ["deflate"], optional = true }

[dev-dependencies]
seed-parser = { workspace = true }

[features]
default = ["svg", "pdf", "3mf"]
svg = []
pdf = ["dep:pdf-writer"]
step = []
stl = []
3mf = ["dep:zip"]
