[package]
name = "seed-render-3d"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "3D geometry and rendering for Seed documents"

[dependencies]
seed-core.workspace = true
thiserror.workspace = true
glam.workspace = true

# OpenCASCADE bindings would go here when implemented
# opencascade-sys = { version = "0.1", optional = true }

[features]
default = []
# occt = ["dep:opencascade-sys"]
