[package]
name = "seed-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for the Seed rendering engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
seed-core = { workspace = true, features = ["serde"] }
seed-parser.workspace = true
seed-resolver.workspace = true
seed-expander.workspace = true
seed-constraint.workspace = true
seed-layout.workspace = true
seed-export.workspace = true
seed-analyze.workspace = true

wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
